# TAoEB

./: .gitmodules  README.md  pyproject.toml  run.sh
.devcontainer/: devcontainer.json
assets/distro/: aoe2-bot.service
distro/: aoe2-bot.service
src/aoe2_bot/: __main__.py  _bootstrap.py  _bot.py  _folders.py  _handlers.py  _quotes.py  bootstrap.py  bot.py
src/aoeii_tgbot/: _handlers.py
